将新增或更新告警规则拆分为两个接口 (#18)
